lang/tests/collaboration/ui/fail/02-no-contract.rs
use liquid_lang as liquid;

#[liquid::collaboration]
mod noop {}

fn main() {}